Eliminación de favoritos Se crea función para quitar un libro de favoritos
